# arkaft-mcp-google-adk

./: .gitignore  Cargo.toml  README.md
examples/: basic_mcp_server.rs  explore_rmcp.rs  test_rmcp.rs
src/: lib.rs  main.rs
src/expert/: adk_knowledge.rs  best_practices.rs  best_practices_tests.rs  documentation.rs  mod.rs
src/review/: analyzer.rs  mod.rs  suggestions.rs  tests.rs
src/server/: handlers.rs  integration_tests.rs  mod.rs  tests.rs
src/utils/: error.rs  mod.rs
