[package]
name = "arkaft-mcp-google-adk"
version = "0.1.0"
edition = "2021"
description = "A Model Context Protocol server for Google ADK expertise and guidance"
authors = ["Arkaft Team"]
license = "MIT"
repository = "https://github.com/arkaft/arkaft-mcp-google-adk"

[dependencies]
# Official MCP SDK from modelcontextprotocol/rust-sdk (requirement 5.2)
rmcp = { version = "0.6.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Additional utilities for Rust code parsing and analysis
syn = { version = "2.0", features = ["full", "parsing"] }  # For Rust code parsing in review engine
quote = "1.0"  # For code generation and suggestions
